Add JDK 25 AOT cache build tasks for local GraalVM REPL startup.
Introduce repl-aot-cache train/run targets using AOTCacheOutput and AOTCache,
persistent java.cp.args, and jar manifest entries for native access; decouple jar from dump-bytecode-cache.

Signed-off-by: The-Alchemist <karl@digital-alchemy.io>